# langesim_optim

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  installation.rst
docs/source/modules/: force_harmonic_polynomial.rst  interpolator.rst  loss_functions.rst  simulator_forces.rst  utilities.rst
langesim_optim/: __init__.py  force_harmonic_polynomial.py  interpolator.py  langesim_optim.py  loss_functions.py  simulator_forces.py  utilities.py
notebooks/: harmonic_variable_stiffness.ipynb  harmonic_variable_stiffness_polynomial.ipynb
tests/: test_FT_pdf.py  test_base_force.py  test_base_harmonic_force.py  test_char_fn.py  test_gaussian.py  test_gaussian_FT.py  test_interpolate.py  test_interpolator.py  test_interpolator_class.py  test_k_from_sim.py  test_loss_fn_grad_k.py  test_loss_fn_k.py  test_loss_fn_mean.py  test_loss_fn_variance.py  test_loss_fn_work.py  test_plot_hist.py  test_simulator.py  test_simulator_OH.py  test_simulator_variable_center.py  test_train_loop.py  test_train_loop_snapshots.py  test_validate_init_ylist.py  test_variable_center_harmonic_force.py  test_variable_harmonic_force.py  test_variable_stiffness_center_harmonic_force.py  test_variable_stiffness_harmonic_force.py  test_variable_stiffness_polynomial.py
