[tool.poetry]
name = "langesim-optim"
version = "0.1.0"
description = ""
authors = ["Gabriel Tellez <gtellez@hypatia.uniandes.edu.co>"]
readme = "README.md"
packages = [{include = "langesim_optim"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
torch = "=2.0.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
