[tool.poetry]
name = "langesim-optim"
version = "0.1.0"
description = ""
authors = ["Gabriel Tellez <gtellez@hypatia.uniandes.edu.co>"]
readme = "README.md"
packages = [{include = "langesim_optim"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
torch = "=2.0.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
scipy = "^1.11.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^1.25.2"
myst-parser = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
